[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-internal-utils"
version = "0.1.0"
description = "Internal shared utilities for enterprise services (demo repo)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pyyaml>=6.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]

